# pytorch-benchmarks

./: .gitignore  LICENSE  README.md  data.py  flags.py  gpu_live_plot.py  main.py  model_utils.py  pyproject.toml  requirements.txt  utils.py
data/: bert_data_preprocessing.py  bert_tokenization.py  data.py  imagenet_label_lookup.npy
models/: bert.py  model_utils.py  optimizer.py  perceiver.py  utils.py
tests/utils/: test_utils.py
utils/: flags.py  gpu_live_plot.py  optimizer.py  plot_val_acc_from_logfile.py  utils.py  zero_redundancy_optimizer.py
